--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/models/movable-object.class.js"></script>
+    <script src="./js/models/character.class.js"></script>
+    <script src="./js/models/chicken.class.js"></script>
+    <script src="./js/models/world.class.js"></script>
     <script src="./js/game.js"></script>
     <title>El Pollo Loco</title>
+
+</head>
+<body onload="init()">
     <h1>EL POLLO LOCO</h1>
     <canvas id="canvas" width="720" height="480"></canvas>
-</head>
-<body>
-    
 </body>
 </html>
