--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+
     <script src="./js/models/drawable-object.class.js"></script>
     <script src="./js/models/movable-object.class.js"></script>
+    <script src="./js/models/throwable-object-class.js"></script>
     <script src="./js/models/character.class.js"></script>
     <script src="./js/models/chicken.class.js"></script>
     <script src="./js/models/cloud.class.js"></script>
