--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script src="./js/models/cloud.class.js"></script>
     <script src="./js/models/background-object.class.js"></script>
     <script src="./js/models/status-bar.class.js"></script>
-
+    <script src="./js/models/botte-bar-object.class.js"></script>
+    <script src="./js/models/coin-bar-object.class.js"></script>
     <script src="./js/models/world.class.js"></script>
     <script src="./js/models/keyboard.class.js"></script>
     <script src="./js/models/bottle-object.class.js"></script>
