--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./js/models/character.class.js"></script>
     <script src="./js/models/chicken.class.js"></script>
     <script src="./js/models/cloud.class.js"></script>
+    <script src="./js/models/dead-chicken-object.class.js"></script>
     <script src="./js/models/background-object.class.js"></script>
     <script src="./js/models/status-bar.class.js"></script>
     <script src="./js/models/botte-bar-object.class.js"></script>
@@ -20,7 +21,7 @@
     <script src="./js/models/world.class.js"></script>
     <script src="./js/models/keyboard.class.js"></script>
     <script src="./js/models/bottle-object.class.js"></script>
-
+    <script src="./js/models/bottle-splash-object.class.js"></script>
     <script src="./js/models/endboss.class.js"></script>
     <script src="./js/models/level.class.js"></script>
 
