added small Chicken

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <script src="./js/models/lootable-objects.class.js"></script>
     <script src="./js/models/character.class.js"></script>
     <script src="./js/models/chicken.class.js"></script>
+    <script src="./js/models/small-chicken.class.js"></script>
     <script src="./js/models/cloud.class.js"></script>
     <script src="./js/models/dead-chicken-object.class.js"></script>
+    <script src="./js/models/dead-small-chicken.object.class.js"></script>
     <script src="./js/models/background-object.class.js"></script>
     <script src="./js/models/status-bar.class.js"></script>
     <script src="./js/models/botte-bar-object.class.js"></script>
