--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="./js/models/world.class.js"></script>
     <script src="./js/models/keyboard.class.js"></script>
     <script src="./js/models/bottle-object.class.js"></script>
+    <script src="./js/models/coin-object.class.js"></script>
     <script src="./js/models/bottle-splash-object.class.js"></script>
     <script src="./js/models/endboss.class.js"></script>
     <script src="./js/models/level.class.js"></script>
