added LifeBar Boss v1

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./js/models/status-bar.class.js"></script>
     <script src="./js/models/botte-bar-object.class.js"></script>
     <script src="./js/models/coin-bar-object.class.js"></script>
+    <script src="./js/models/endboss-lifebar-object.class.js"></script>
     <script src="./js/models/world.class.js"></script>
     <script src="./js/models/keyboard.class.js"></script>
     <script src="./js/models/bottle-object.class.js"></script>
