--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./js/models/dead-small-chicken.object.class.js"></script>
     <script src="./js/models/background-object.class.js"></script>
     <script src="./js/models/gameover.class.js"></script>
+    <script src="./js/models/youLost.class.js"></script>
     <script src="./js/models/status-bar.class.js"></script>
     <script src="./js/models/botte-bar-object.class.js"></script>
     <script src="./js/models/coin-bar-object.class.js"></script>
@@ -29,7 +30,6 @@
     <script src="./js/models/bottle-splash-object.class.js"></script>
     <script src="./js/models/endboss.class.js"></script>
     <script src="./js/models/level.class.js"></script>
-
     <script src="./js/levels/level1.js"></script>
     <script src="./js/game.js"></script>
     <title>El Pollo Loco</title>
