--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 
     <div class="mainpage-container">
         <h1>EL POLLO LOCO</h1>
-        <canvas class="d-none" id="canvas" width="720" height="480"></canvas>
+        <canvas class="d-none" id="canvas" width="720" height="480">
+        </canvas>
         <div class="start-container" id="start-overlay">
             <div class="row">
-                <button onclick="startGame(); "class="button-74" role="button">START</button>
-                <button onclick="showControls()"class="button-74" role="button"><img class="button-images" src="./css/icons/controller.png"
-                        alt="Controller_PICTURE"></button>
-                <button onclick="muteBgMusic()"id="music-btn" class="button-74" role="button"><img id="music-img"class="button-images" src="./css/icons/music.png"
-                        alt="MUSIC_PICTURE"></button>
+                <button onclick="startGame(); " class="button-74" role="button">START</button>
+                <button onclick="showControls()" class="button-74" role="button"><img class="button-images"
+                        src="./css/icons/controller.png" alt="Controller_PICTURE"></button>
+                <button onclick="muteBgMusic()" id="music-btn" class="button-74" role="button"><img id="music-img"
+                        class="button-images" src="./css/icons/music.png" alt="MUSIC_PICTURE"></button>
             </div>
             <div id="control-btn" class="row d-none">
                 <div id="settings-frame">
@@ -59,13 +60,20 @@
                         <img src="./css/icons/right.png" alt="">
                     </div>
                     <div class="key">Jump
-                        <img id="jump-img"src="./css/icons/left.png" alt="">
+                        <img id="jump-img" src="./css/icons/left.png" alt="">
                     </div>
-                    <div class="key">Throw <div id="keyD">D</div></div>
+                    <div class="key">Throw <div id="keyD">D</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+            <!-- Mobile Attack -->
+            <div class="attack-button">
+                <img src="./img/6_salsa_bottle/salsa_bottle.png">
+            </div>
+
 
 </body>
 
